k8s/pihole/pihole-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  namespace: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:latest
          ports:
            - containerPort: 53
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: pihole-data
              mountPath: /etc/pihole
            - name: pihole-cert
              mountPath: /etc/pihole/pki
          securityContext:
            capabilities:
              add: ["NET_ADMIN", "SYS_TIME", "SYS_NICE"]
      restartPolicy: Always
      volumes:
        - name: pihole-data
          hostPath:
            path: /mnt/pihole
            type: DirectoryOrCreate
        - name: pihole-cert
          secret:
            secretName: pihole-service-cert
