k8s/pihole/pihole-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns-service
  namespace: pihole
  annotations:
    "lbipam.cilium.io/ips": "192.168.1.20"
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      protocol: TCP
      port: 53
      targetPort: 53
    - name: dns-udp
      protocol: UDP
      port: 53
      targetPort: 53
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-web-service
  namespace: pihole
spec:
  selector:
    app: pihole
  type: ClusterIP
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
