k8s/pihole/pihole-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress
  namespace: pihole
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    cert-manager.io/cluster-issuer: letsencrypt-cluster-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - pihole.mdch-lab.dev
      secretName: pihole.mdch-lab.dev-cert
  rules:
    - host: pihole.mdch-lab.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pihole-web-service
                port:
                  number: 443
